package coffee_maker;

public interface CoffeeType {

    String coffee();

}
