package coffee_maker;

public class Espresso implements CoffeeType {

    @Override
    public String coffee() {
        return "Espresso";
    }

}
